Fixed wrong size of text

--- a/src/main/resources/sep/wrapper/agent-config.css
+++ b/src/main/resources/sep/wrapper/agent-config.css
@@ -122,3 +122,9 @@
     -fx-spacing: 16px;
     -fx-alignment: center;
 }
+
+#b-no-close-terminal-text {
+    -fx-font-size: 22px;
+    -fx-font-weight: 700;
+    -fx-text-fill: -primary-text-fill;
+}
